# impl_utils

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  requirements.txt  scratch_pad.ipynb
.github/workflows/: pytest.yaml  ruff.yaml
docs/: conf.py  config.rst  file_system.rst  lazarus_implementation_tools.external_apis.rst  lazarus_implementation_tools.file_system.rst  lazarus_implementation_tools.general.rst  lazarus_implementation_tools.grading.rst  lazarus_implementation_tools.models.rst  lazarus_implementation_tools.rst  lazarus_implementation_tools.sync.firebase.rst  lazarus_implementation_tools.sync.gdrive.rst  lazarus_implementation_tools.sync.microsoft.rst  lazarus_implementation_tools.sync.rst  lazarus_implementation_tools.transformations.csv.rst  lazarus_implementation_tools.transformations.ocr.rst  lazarus_implementation_tools.transformations.pdf.rst  lazarus_implementation_tools.transformations.rst  models.rst  transformations.pdf.rst
scripts/: annotate_folder.py  googledrive_functionalities.py  o365_email_functionalities.py  onedrive_functionalities.py  sharepoint_functionalities.py
scripts/document understanding/: README.md  component_ocr.py  components.py  config.py  image_parsing.py  region_of_interest_app.py
src/: config.py  main.py
src/external_apis/: consensus_apis.py  third_party_paid_apis.py  utils.py
src/file_system/: utils.py
src/general/: core.py  pydantic_models.py  utils.py
src/grading/: pdf_highlighter.py  utils.py
src/hugging_face/: uploader.py  utils.py
src/lazarus_implementation_tools/: config.py
src/models/: apis.py  batching.py  utils.py
src/s3/: file_transfer.py
src/vllm/: utils.py
tests/: conftest.py
tests/file_system/: test_utils.py
tests/general/: test_utils.py
tests/models/: test_utils.py
tests/prompting/: test_synchronous.py
(+251 files in other folders)
